--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       }
 
       body{
-        font-family: fantasy;
+        font-family: monospace;
       }
       h1{
        background-color: lightgreen;
